removing deprecated code/deprecated calls